# fastapi-tortoise-api-base

./: .dockerignore  .env.example  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: lint.yaml
.vim/: coc-settings.json
api/: __init__.py  db_init.py  extra_models.py  main.py  settings.py
api/core/: email.py  sms.py
api/core/security/: auth.py  hashing.py  jwt_handler.py
api/database/: db_init.py  models.py  settings.py
api/database/seeders/: sample_seeders.py
api/models/: token.py  user.py
api/pydantic_models/: email.py  message.py  token.py  user.py
api/routers/v1/: api.py  dependencies.py
api/routers/v1/endpoints/: email.py  login.py  sms.py  users.py
api/security/: auth.py  jwt_handler.py
api/utils/email/: email.py
api/utils/sms/: sms.py
app/: __init__.py  main.py
app/core/: email.py  settings.py  sms.py
app/core/security/: auth.py  jwt_handler.py
app/core/security/access_control/: access_control.py  model.conf  policies.csv
app/database/: db_init.py  db_seed.py  models.py
app/database/crud/: todos.py  users.py
app/database/crud/utils/: utils.py
app/database/seeders/: sample_seeders.py
app/pydantic_models/: message.py  messages.py  todo.py  todos.py  token.py  user.py  users.py
app/routers/v1/: __init__.py  api.py  dependencies.py
app/routers/v1/endpoints/: email.py  emails.py  login.py  sms.py  todos.py  users.py
app/utils/: utils.py
tests/: conftest.py
tests/api/endpoints/: ping_test.py
tests/api/endpoints/v1/: user_test.py
