[tool.poetry]
name = "fastapi-tortoise-api-base"
version = "0.1.0"
description = ""
authors = ["plusiv"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.99.0"
tortoise-orm = {extras = ["asyncmy"], version = "^0.19.3"}
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
email-validator = "^2.0.0.post2"
casbin = "^1.19.0"


[tool.poetry.group.dev.dependencies]
tortoise-cli = "^0.1.2"
faker = "^19.1.0"
aerich = "^0.7.1"
black = "^23.3.0"
pre-commit = "^3.3.3"
httpx = "^0.24.1"
pytest = "^7.3.1"
asgi-lifespan = "^2.1.0"
ruff = "^0.0.275"

[tool.ruff]
ignore = ["E501"]

[tool.aerich]
tortoise_orm = "app.core.settings.TORTOISE_ORM"
location = "app/database/migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
